--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,15 +4,6 @@
     <% var endYear = (theme.copyright && theme.copyright.end_year) ? theme.copyright.end_year : new Date().getFullYear() %>
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
-    <%= config.author || config.title %>
-  </div>
-  <div class="footer-right">
-    <nav>
-      <ul>
-        <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li>
-        <% } %>
-      </ul>
-    </nav>
+    <a href="mailto: yjli815@outlook.com">yjli</a>
   </div>
 </footer>
