--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -2,8 +2,8 @@
     <div class="<%= class_name %>">
       <% if (is_post()) { %>
         <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, config.date_format) %></time>
-        <% if (theme.post.show_updated && post.date !== post.updated) { %>
-        (Updated: <time datetime="<%= date_xml(post.updated) %>" itemprop="dateModified"><%= date(post.updated, config.date_format) %></time>)
+        <% if (theme.post.show_updated && !post.date.isSame(post.updated, 'day')) { %>
+        (<%= __('post.Updated') %>: <time datetime="<%= date_xml(post.updated) %>" itemprop="dateModified"><%= date(post.updated, config.date_format) %></time>)
         <% } %>
       <% } else { %>
         <% if (is_home() && theme.posts_overview.sort_updated || is_archive() && theme.archive.sort_updated ) { %>
