--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,5 +5,13 @@
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
     <a href="mailto: yjli815@outlook.com">yjli</a>
+    <% if (theme.rss === '' && config.feed && config.feed.path) { %>
+      <% theme.rss = config.feed.path %>
+    <% } %>
+    <% if (theme.rss) { %>
+      <a class="icon" target="_blank" rel="noopener" href="<%= url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml">
+        <i class="fas fa-rss"></i>
+      </a>
+    <% } %>
   </div>
 </footer>
