--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -7,7 +7,6 @@
       </span>
       <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
       <%- partial('_partial/post/category') %>
-      <%- partial('_partial/post/tag') %>
     </div>
   </header>
   <%- partial('_partial/post/gallery') %>
@@ -15,4 +14,8 @@
     <%- page.content %>
   </div>
 </article>
+<span>（完）</span>
+<br>
+<%- partial('_partial/post/tag') %>
+<br>
 <%- partial('_partial/comments') %>
