--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -56,7 +56,7 @@
       <%- css('css/rtl') %>
     <% } %>
     <!-- rss -->
-    <% if (theme.rss === '' && config.feed && config.feed.path) { %>
+    <% if (!theme.rss && config.feed && config.feed.path) { %>
       <% theme.rss = config.feed.path %>
     <% } %>
     <% if (theme.rss) { %>
